--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 
     <title>Comic Apps </title>
     <!-- Custom fonts for this template-->
+    <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
@@ -126,10 +127,83 @@
                                         <h6 class="m-0 font-weight-bold text-primary">Welcome to Dashboard</h6>
                                     </div>
                                     <div class="card-body">
-                                        <div class="text-center">
-                                            <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="assets/dashboard.svg" alt="">
+                                        <div class="row d-flex justify-content-center">
+                                            <a data="1" ondblclick="handleDoubleClick(1)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-1" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a data="2" ondblclick="handleDoubleClick(2)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-2" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a data="3" ondblclick="handleDoubleClick(3)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-3" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a data="4" ondblclick="handleDoubleClick(4)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-4" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a data="5" ondblclick="handleDoubleClick(5)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-5" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a data="6" ondblclick="handleDoubleClick(6)">
+                                                <div class="col-md col-sm-12">
+                                                    <div class="card m-2" style="width: 9.5rem;">
+                                                        <div class="img-container">
+                                                            <div id="heart-6" class="heart"><i class="fas fa-heart"></i></div>
+                                                            <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                        </div>
+                                                        <p class="text-center">Batman</p>
+                                                    </div>
+                                                </div>
+                                            </a>
                                         </div>
-                                        <p id="manipulateMe">Welcome to Dashboard Comic Admin</p>
+                                        <!-- <div class="character-container">
+                                            <div class="card" data="1" ondblclick="myFunction(1)">
+                                                <div class="img-container">
+                                                    <div id="heart-1" class="heart"><i class="fas fa-heart"></i></div>
+                                                    <img src="https://img.okezone.com/content/2020/10/17/206/2295251/terlihat-orang-berkostum-superman-di-film-the-batman-vC24hBDNdF.jpg" alt="">
+                                                </div>
+                                                <p>Batman</p>
+                                            </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
