--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -131,6 +132,7 @@
                                             <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="assets/dashboard.svg" alt="">
                                         </div>
                                         <p id="manipulateMe">Welcome to Dashboard Comic Admin</p>
+
                                     </div>
                                 </div>
                             </div>
@@ -151,21 +153,22 @@
                         </div>
 
 
-                        <div id="comicContent">
-                            <h1 class="h3 mb-4 text-gray-800">My Favorite Comic</h1>
+                        <div id="characterContent">
+                            <h1 class="h3 mb-4 text-gray-800">My Favorite Character</h1>
                             <div class="col-lg-12 mb-4">
                                 <!-- Illustrations -->
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <a type="button" id="btnCreateComic" class="btn btn-primary"> <i class="fa fa-plus-circle"></i> Add Comic</a>
-                                        <a type="button" onclick="refreshTableComic()" class="btn btn-secondary"> <i class="fa fa-sun"></i> Refresh</a>
+                                        <a type="button" id="btnCreateCharacter" class="btn btn-primary"> <i class="fa fa-plus-circle"></i> Add Character</a>
+                                        <a type="button" onclick="refreshTableCharacter()" class="btn btn-secondary"> <i class="fa fa-sun"></i> Refresh</a>
                                     </div>
                                     <div class="card-body">
                                         <div class="table-responsive">
-                                            <table class="table table-bordered" id="tableComic" width="100%" cellspacing="0">
+                                            <table class="table table-bordered" id="tableCharacter" width="100%" cellspacing="0">
                                                 <thead>
                                                     <tr>
                                                         <th>ID</th>
+                                                        <th>image</th>
                                                         <th>name</th>
                                                         <th>Action</th>
                                                     </tr>
@@ -179,12 +182,12 @@
                             </div>
                         </div>
 
-                        <div id="characterContent">
+                        <div id="comicContent">
                             <div class="col-lg-12 mb-4">
                                 <!-- Illustrations -->
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">Data Character</h6>
+                                        <h6 class="m-0 font-weight-bold text-primary">Data Comic</h6>
                                     </div>
                                     <div class="card-body">
 
@@ -194,7 +197,6 @@
                         </div>
 
                         <!-- END PAGE -->
-
 
 
                     </div>
@@ -218,6 +220,38 @@
 
         </div>
         <!-- End of Page Wrapper -->
+
+        <!-- Modal Character -->
+        <div class="modal fade" id="modal-character" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form>
+                        <div class="modal-header">
+                            <h4 class="modal-title"></h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true"> &times;</span> </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="character_id" class="col-md-5 control-label">Comic</label>
+                                <div class="col-md-12">
+                                    <select class="js-example-basic-single" id="character_id" name="character_id" style="width: 100% "></select>
+                                    <!-- <input type="text" id="description" class="form-control" placeholder="description" name="description" autofocus> -->
+                                    <span class="help-block with-errors"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">
+                            <span class='glyphicon glyphicon-check'></span> Simpan</button>
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">
+                            <span class='glyphicon glyphicon-remove'></span> Batal
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- END MODAL CHARACTER -->
 
         <a class="scroll-to-top rounded" href="#page-top">
             <i class="fas fa-angle-up"></i>
@@ -352,6 +386,7 @@
     <script type="text/javascript" src="//gyrocode.github.io/jquery-datatables-checkboxes/1.2.12/js/dataTables.checkboxes.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
