[nanda] refactor code

--- a/client/index.html
+++ b/client/index.html
@@ -248,7 +248,7 @@
                             <div class="form-group">
                                 <label for="character_id" class="col-md-5 control-label">Comic</label>
                                 <div class="col-md-12">
-                                    <select class="js-example-basic-single" id="character_id" name="character_id" style="width: 100% "></select>
+                                    <select id="character_id" name="character_id" style="width: 100% "></select>
                                     <!-- <input type="text" id="description" class="form-control" placeholder="description" name="description" autofocus> -->
                                     <span class="help-block with-errors"></span>
                                 </div>
