Add feature search character

--- a/client/index.html
+++ b/client/index.html
@@ -156,6 +156,20 @@
                                     <div class="card-header py-3">
                                         <h6 class="m-0 font-weight-bold text-primary">COMIC - Double tab me to become your favorite</h6>
                                     </div>
+                                    <div class="" style="width: 20%; ">
+                                        <div class="d-flex">                                            
+                                        <form id="form-search" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                                            <div class="input-group">
+                                                <input id="search_character_name" type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-primary" type="button" id="search_character" onclick="searchCharacter()">
+                                                        <i class="fas fa-search fa-sm"></i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                     </div>
+                                    </div>
                                     <div class="card-body">
                                         <div class="row d-flex justify-content-center" id="characters">
 
