--- a/client/index.html
+++ b/client/index.html
@@ -150,11 +150,10 @@
                                 </div>
                             </div>
 
-
                             <div class="col-lg-12 mb-4">
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">COMIC - Double tab me to become your favorite</h6>
+                                        <h6 class="m-0 font-weight-bold text-primary">Character - Double tab me to become your favorite</h6>
                                     </div>
                                     <div class="" style="width: 20%; ">
                                         <div class="d-flex">
